syntax = "proto3";

option java_package = "com.astraios.grpc.user";
option java_multiple_files = true;
option go_package = "github.com/astraios/grpc/user";

package user;

service UserService {
  rpc VerifyPassword (VerifyPasswordRequest) returns (VerifyPasswordResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse) ;
  rpc GetUserId(UserDataRequest) returns (UserDataResponse);
}

message VerifyPasswordRequest {
  string username = 1;
  string password = 2; // 明文密码
}

message VerifyPasswordResponse {
  bool success = 1;       // 验证是否成功
  string userId = 2;      // 用户ID
  repeated string roles = 3; // 用户角色列表
}

message RegisterRequest{
  string username = 1;
  string password = 2;
  int32 type = 3;
}

message RegisterResponse {
  int32 code = 1;
}

message UserDataRequest{
  string username = 1;
  string userid = 2;
}

message UserDataResponse{
  string username = 1;
  string userid = 2;
}